# torchsight

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NEXT_STEPS.md  README.md  install.ps1  install.sh
.github/homebrew/: torchsight.rb
.github/workflows/: ci.yml  release.yml
beam/: LABELS.md  README.md  ROADMAP.md  ds_config.json
beam/data/: .gitignore  README.md
beam/evaluation/: .gitignore  BENCHMARK_NUMBERS.md  PAPER_DELTAS.md  PAPER_REVIEW.md  README.md
beam/evaluation/scripts/: build_external_benchmark.py  compute_mcnemar.py  eval_beam.py  eval_commercial.py  eval_external.py  eval_external_claude.py  eval_external_gemini.py  eval_external_gpt5.py  eval_regex_baseline.py  eval_torchsight.py  expand_eval_images.py  generate_eval_1000.py  generate_eval_images.py  generate_figures.py  print_benchmark_numbers.py  sample_for_manual_review.py  summarize_external.py
beam/huggingface/: README.md
beam/output/: Modelfile
beam/scripts/: download_all.py  download_cia_foia.py  download_dtic.py  download_edgar.py  download_enron.py  download_fenrir.py  download_nist_training.py  download_nvd.py  download_prompt_injection.py  download_seclists.py  eval_ollama.py  export_gguf.py  sft_converter.py  train_lora.py
beam/scripts/processors/: ai4privacy_processor.py  edgar_processor.py  enron_processor.py  hard_negatives_generator.py  loghub_processor.py  mtsamples_processor.py  nist_processor.py  payloads_processor.py  process_all.py  prompt_injection_processor.py  seclists_processor.py
core/: Cargo.toml
core/src/: config.rs  lib.rs  main.rs  platform.rs
core/src/analyzers/: email.rs  image.rs  mod.rs  text.rs
core/src/cli/: git_hook.rs  mod.rs  policy.rs  prompts.rs  repl.rs  stdin.rs  watch.rs
core/src/llm/: ollama.rs
core/src/memory/: mod.rs  session.rs
core/src/report/: builder.rs  formats.rs  mod.rs
core/src/scanner/: classifier.rs  discovery.rs  pipeline.rs
core/tests/: integration.rs
desktop/: package.json
desktop/src/: index.html  main.js  styles.css
desktop/src-tauri/: Cargo.toml  installer-bootstrap.ps1  installer-hooks.nsi  pull-models.ps1  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  CORPUS.md
installer/windows/: build.ps1  torchsight-setup.iss
report/: generate.py  pyproject.toml  template.html
site/: package-lock.json  package.json  wrangler.jsonc
site/public/: robots.txt
site/scripts/: sync-version.mjs
site/src/: version.ts
site/src/layouts/: Layout.astro
site/src/pages/: cli.astro  desktop.astro  docs.astro  download.astro  index.astro  privacy.astro
site/src/styles/: global.css
src/: main.rs
src/analyzers/: image.rs  mod.rs  ocr.rs  patterns.rs  text.rs
src/cli/: git_hook.rs  mod.rs  policy.rs  repl.rs  snake.rs  stdin.rs
src/llm/: ollama.rs
src/memory/: session.rs
src/report/: builder.rs  formats.rs
src/scanner/: classifier.rs  discovery.rs  mod.rs  pipeline.rs
training/: DATASET_ANALYSIS.md  LABELS.md  MODEL_CARD.md  README.md  dataset_dashboard.html  run_training.sh
training/data/: .gitignore
training/huggingface/: README.md  upload.py
training/output/: Modelfile
training/scripts/: analyze_coverage.py  download_ai4privacy.py  download_all.py  download_army_doctrine.py  download_crs.py  download_exploitdb.py  download_gao.py  download_ghsa.py  download_hf_datasets.py  download_loghub.py  download_mitre.py  download_mtsamples.py  download_nvd.py  download_ossf_malicious.py  download_owasp.py  download_payloads.py  download_phishing.py  eval_model.py  export_gguf.py  generate_v2_supplement.py  package_training.sh  rebalance_dataset.py  sft_converter.py  train_lora.py
training/scripts/processors/: ai4privacy_processor.py  crs_processor.py  edgar_processor.py  enron_processor.py  fenrir_processor.py  ghsa_processor.py  hard_negatives_generator.py  loghub_processor.py  mitre_processor.py  modern_attacks_generator.py  nist_processor.py  nvd_processor.py  ossf_processor.py  payloads_processor.py  phishing_processor.py  process_all.py  (+3 more)
