[workspace]
members = ["core"]
exclude = ["desktop/src-tauri"]
resolver = "2"

[workspace.package]
version = "1.0.0-rc5"
edition = "2024"
description = "On-premise cybersecurity scanner for text and image files using local LLMs"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
atty = "0.2"
walkdir = "2"
infer = "0.16"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
crossterm = "0.28"
rand = "0.8"
regex = "1"
once_cell = "1"
toml = "0.8"
zip = "0.6"
calamine = "0.24"
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
tempfile = "3"
mail-parser = "0.11"
