[package]
name = "torchsight"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
dialoguer.workspace = true
console.workspace = true
indicatif.workspace = true
atty.workspace = true
walkdir.workspace = true
infer.workspace = true
base64.workspace = true
chrono.workspace = true
dirs.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
crossterm.workspace = true
rand.workspace = true
regex.workspace = true
once_cell.workspace = true
toml.workspace = true
zip.workspace = true
calamine.workspace = true
tempfile.workspace = true
mail-parser.workspace = true
