[package]
name = "torchsight-desktop"
version = "1.0.0-rc15"
description = "TorchSight — On-premise cybersecurity scanner"
authors = ["TorchSight"]
edition = "2021"

[lib]
name = "torchsight_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
sysinfo = "0.32"
dirs = "6"
walkdir = "2"
chrono = "0.4"
open = "5"
